flux4