@@ -26,9 +26,9 @@ public class OrganizationService {
 	private final OrgMongoRepository orgMongoRepository;
 
 	public void organize(List<OrgMappingDTO> list) {
-		Stream<Organization> orgs = orgPersistRepository
-				.saveAll(list.parallelStream().map(map -> new Organization(map)).collect(Collectors.toList())).toStream();
-		orgMongoRepository.saveAll(orgs.parallel().map(org -> new OrgDocument(org)).toList());
+		Mono<List<Organization>> orgs = orgPersistRepository
+				.saveAll(list.parallelStream().map(map -> new Organization(map)).collect(Collectors.toList())).collectList();
+		orgMongoRepository.saveAll(orgs.block().parallelStream().map(org -> new OrgDocument(org)).toList());
 	}
 
 	public Flux<OrgDocument> retriveOrg(Pageable pageable) {
